🕵️‍♀️fixed mobile menu alignment/

--- a/cats/components/Navbar/Navbar.module.css
+++ b/cats/components/Navbar/Navbar.module.css
@@ -8,7 +8,7 @@
 }
 .logo {
 	position: absolute;
-	top: 1.4%;
+	top: 1.5%;
 	left: 1%;
 }
 .nav ul {
